<resources>
    <!-- Nombre App -->
    <string name="app_name">LSP</string>

    <!-- Titulos actividades -->
    <string name="titulo_actividad_actividad_contactos">Contactos</string>
    <string name="titulo_actividad_insertar_contacto">Añadir nuevo contacto</string>
    <string name="titulo_actividad_editar_contacto">Editar contacto</string>

    <!-- Formulario Actividad inserción -->
    <string name="hint_campo_texto_nombre">Primer nombre</string>
    <string name="hint_campo_texto_apellido">Primer apellido</string>
    <string name="hint_campo_texto_telefono">Teléfono</string>
    <string name="hint_campo_texto_correo">Correo</string>


    <!-- Tooltips acciones toolbar -->
    <string name="accion_sync">Sincronizar</string>
    <string name="accion_eliminar">Eliminar</string>
    <string name="accion_guardar">Guardar</string>
    <string name="accion_descartar">Descartar</string>
    <string name="search">Buscar</string>
    <!-- Cuenta Sync Adapter -->
    <string name="tipo_cuenta">com.system.lsp.cuenta</string>

    <!-- Autoridad del provider -->
    <string name="autoridad_provider">com.system.lsp</string>


    <string name="hint_email">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Salir</string>
    <string name="name">Fullname</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Ruta - Hoy</string>
    <string name="nav_printers">Impresoras</string>
    <string name="nav_customers">Clientes</string>
    <string name="nav_loans_list">Prestamos</string>
    <string name="nav_payments">Pagos</string>
    <string name="nav_zone">Ruta Asignada</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_settings">Ajustes avanzados</string>


    <string name="titulo_cobros_de_hoy">Cobros de Hoy</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detalle_prestamo">DetallePrestamo</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">TODAS</string>
    <string name="tab_text_2">PENDIENTES</string>
    <string name="tab_text_3">PAGADAS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="todos_los_prestamos">TODOS LOS PRESTAMOS</string>
    <string name="prestamos_pendiente">PRESTAMOS PENDIENTE</string>
    <string name="prestamos_pagado">PRESTAMOS PAGADOS</string>


    <string name="git_branch">Git branch 2_onCreateDialog_dialog</string>
    <string name="button_text">Click me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="pos_button">OK</string>
    <string name="neg_button">Cancel</string>
    <string name="dialog_message">I am a dialog created in onCreateDialog of a DialogFragment.</string>
    <string name="dialog_tag">dialog</string>


    <!--    MIGRATION-->

    <string name="api_error_user_pass_are_bad">Usuario y contraseña son incorrectos</string>
    <string name="api_error_server_outage">El Sistema esta fuera de servicio</string>
    <string name="thrown_exception">Ha ocurrido un error interno, intente de nuevo.</string>
    <string name="user_password_should_be_not_empty">Usuario y contraseña no deben estar en blanco.</string>
    <string name="authentication_platform_failed">El codigo de plataforma es invalido</string>
    <string name="platform_hash_code_placeholder">0000</string>
    <string name="authentication_button">Autenticar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <!--    Fragment labels-->
    <string name="fragment_label_home">Inicio</string>
</resources>
