<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.herprogramacion.peopleapp.ui.Prestamo.DetallePrestamo">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingBottom="8dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <View
                android:id="@+id/vertical_separatorr"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:background="#000"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2017"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nombre_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="Nombre del cliente"
                android:textColor="@color/negro87"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fecha" />

            <TextView
                android:id="@+id/documento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="Documento"
                android:textColor="@color/negro87"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre_cliente" />

            <TextView
                android:id="@+id/idprestamo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="#000"
                android:textSize="18dp"
                android:textColor="@color/bg_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="1dp" />


            <TextView
                android:id="@+id/cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="6dp"
                android:text="Capital:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/documento" />

            <TextView
                android:id="@+id/capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:text="RD$ 0"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/cap"
                app:layout_constraintStart_toStartOf="@+id/cap"
                app:layout_constraintTop_toBottomOf="@+id/documento" />


            <TextView
                android:id="@+id/inte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="Interes:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cap" />

            <TextView
                android:id="@+id/interes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:text="RD$ 0"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/inte"
                app:layout_constraintStart_toStartOf="@+id/inte"
                app:layout_constraintTop_toBottomOf="@+id/cap" />


            <TextView
                android:id="@+id/mor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="Mora:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inte" />

            <TextView
                android:id="@+id/mora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:text="RD$ 0"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/mor"
                app:layout_constraintStart_toStartOf="@+id/mor"
                app:layout_constraintTop_toBottomOf="@+id/inte" />


            <TextView
                android:id="@+id/bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="Balance:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mor" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:text="RD$ 0"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/bal"
                app:layout_constraintStart_toStartOf="@+id/bal"
                app:layout_constraintTop_toBottomOf="@+id/mor" />

            <View
                android:id="@+id/vertical_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="44dp"
                android:background="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance" />


            <TextView
                android:id="@+id/cuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Cot:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro87"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/documento" />

            <TextView
                android:id="@+id/cuotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cuo"
                app:layout_constraintTop_toBottomOf="@+id/documento" />


            <TextView
                android:id="@+id/pag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Pag:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro87"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cuotas" />

            <TextView
                android:id="@+id/pagada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/completedStatus"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/pen"
                app:layout_constraintTop_toBottomOf="@+id/cuotas" />


            <TextView
                android:id="@+id/pen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Pen:"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/negro87"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pagada" />

            <TextView
                android:id="@+id/pendiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/pag"
                app:layout_constraintTop_toBottomOf="@+id/pagada" />


            <Button
                android:id="@+id/adelantarPago"
                android:layout_width="98dp"
                android:layout_height="29dp"
                android:layout_marginTop="32dp"
                android:background="@color/completedStatus"
                android:text="REALIZAR PAGO"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/documento"
                app:layout_constraintTop_toBottomOf="@+id/pendiente" />


        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/MyCustomTabLayout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />



</android.support.design.widget.CoordinatorLayout>
